==> oceancjc/FreeRTOS_Framework_stm32f107/W5500_Lib/Ethernet/wizchip_conf.c <==
#include <stddef.h>
#include "wizchip_conf.h"
#include "spi.h"
#define W5500SPICHANNEL                             (1)
#define CS_IOPORT                                  GPIOE
#define CS_PIN                                     GPIO_Pin_14

void 	wizchip_cs_select(void)            {    GPIO_SetBits(CS_IOPORT,CS_PIN);    }

void 	wizchip_cs_deselect(void)          {    GPIO_ResetBits(CS_IOPORT,CS_PIN);    }
